deployments/gateways/smoke/smoke-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: smoke-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: smoke-virtual-service
spec:
  hosts:
  - ""  
  gateways:
  - smoke-gateway
  http:  
  - match:  
    - uri:
        prefix: /nginx
    rewrite:
      uri: /      
    route:
    - destination:
        host: nginxapp-svc
        port:
          number: 80
  - match:  
    - uri:
        prefix: /apache
    rewrite:
      uri: /
    route:
    - destination:
        host: apacheapp-svc
        port:
          number: 80
